--- a/src/styles/components/ProjectsList.scss
+++ b/src/styles/components/ProjectsList.scss
@@ -31,7 +31,7 @@
   &__img {
     width: 100%;
     height: 100%;
-    transition: .5s .1s;
+    transition: .3s;
   }
 
   &__img-backdrop {
@@ -42,7 +42,7 @@
     left: 0;
     background-color: rgba($color-primary-dark, .85);
     opacity: 1;
-    transition: .4s .1s;
+    transition: .2s;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -63,7 +63,7 @@
     color: $color-grey-dark-1;
     text-transform: uppercase;
     letter-spacing: 1px;
-    transition: transform .4s .2s, opacity .4s .2s, color .3s, border .3s, box-shadow .3s;
+    transition: transform .4s, opacity .4s, color .3s, border .3s, box-shadow .3s;
     font-weight: bold;
     font-size: 1.3rem;
     transform: translateY(0);
