--- a/src/styles/components/TechnologiesList.scss
+++ b/src/styles/components/TechnologiesList.scss
@@ -28,6 +28,7 @@
 .technologies__item {
   list-style: none;
   position: absolute;
+  white-space: nowrap;
 
   animation: technologiesRotate 16s infinite linear reverse;
 
@@ -124,10 +125,6 @@
 
   @include respond(phone-large) {
     font-size: 1rem;
-  }
-
-  @include respond(tab-port) {
-    font-size: 1.2rem;
   }
 }
 
