change folders structure

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,13 +18,12 @@
 @import './components/ProjectsList.scss';
 @import './components/ProjectView.scss';
 @import './components/Slider.scss';
-@import './components/UIElements/Heading.scss';
-@import './components/UIElements/Logo.scss';
-@import './components/UIElements/HamburgerButton.scss';
-@import './components/UIElements/Backdrop.scss';
-@import './components/UIElements/Modal.scss';
-@import './components/UIElements/Spinner.scss';
-@import './components/Navigation/Navigation.scss';
-@import './components/Navigation/NavigationItems/NavigationItem.scss';
-@import './components/FormElements/Input.scss';
-@import './components/FormElements/Button.scss';
+@import './components/Heading.scss';
+@import './components/Logo.scss';
+@import './components/HamburgerButton.scss';
+@import './components/Backdrop.scss';
+@import './components/Modal.scss';
+@import './components/Spinner.scss';
+@import './components/Navigation.scss';
+@import './components/Input.scss';
+@import './components/Button.scss';
